--- a/app/src/main/assets/d3graph.html
+++ b/app/src/main/assets/d3graph.html
@@ -2,10 +2,42 @@
 <html>
   <head>
     <meta name="viewport" content="width=1040">
-    <script type="text/javascript" src="file:///android_asset/d3.v5.min.js" ></script>
+<!--    <script type="text/javascript" src="file:///android_asset/d3.v5.min.js" ></script>-->
+    <script src="https://d3js.org/d3-array.v2.min.js"></script>
+    <script src="https://d3js.org/d3-array.v2.min.js"></script>
+    <script src="https://d3js.org/d3-color.v1.min.js"></script>
+    <script src="https://d3js.org/d3-format.v1.min.js"></script>
+    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+    <script src="https://d3js.org/d3-time.v1.min.js"></script>
+    <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
+    <script src="https://d3js.org/d3-scale.v3.min.js"></script>
+    <script src="https://d3js.org/d3-color.v1.min.js"></script>
+    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/d3-selection.v1.min.js"></script>
     <script type="text/javascript" src="file:///android_asset/loadPieChart.js" ></script>
   </head>
   <body>
-    <svg id="piechart" width="100%" height="100%"></svg>
+<!--    <svg id="piechart" width="100%" height="100%"></svg>-->
+<!--svg`-->
+<svg width="100%" height="100%">
+  <style>
+    text {
+      font-family: sans-serif;
+      font-size: 10px;
+    }
+    .node {
+      stroke-linecap: round;
+    }
+    .link {
+      fill: none;
+    }
+  </style>
+
+  </svg>
+<script>
+<!-- loadPieChart();-->
+</script>
+
   </body>
 </html>
