--- a/app/src/main/assets/d3graph.html
+++ b/app/src/main/assets/d3graph.html
@@ -15,12 +15,21 @@
     <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/d3-selection.v1.min.js"></script>
+    <script src="https://d3js.org/d3-color.v2.min.js"></script>
+    <script src="https://d3js.org/d3-dispatch.v2.min.js"></script>
+    <script src="https://d3js.org/d3-ease.v2.min.js"></script>
+    <script src="https://d3js.org/d3-interpolate.v2.min.js"></script>
+    <script src="https://d3js.org/d3-selection.v2.min.js"></script>
+    <script src="https://d3js.org/d3-timer.v2.min.js"></script>
+    <script src="https://d3js.org/d3-transition.v2.min.js"></script>
+    <script src="https://d3js.org/d3-drag.v2.min.js"></script>
+    <script src="https://d3js.org/d3-zoom.v2.min.js"></script>
     <script type="text/javascript" src="file:///android_asset/loadPieChart.js" ></script>
   </head>
   <body>
 <!--    <svg id="piechart" width="100%" height="100%"></svg>-->
 <!--svg`-->
-<svg width="100%" height="100%">
+<svg width="3000px" height="3000px">
   <style>
     text {
       font-family: sans-serif;
