--- a/app/src/main/assets/d3graph.html
+++ b/app/src/main/assets/d3graph.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=1040">
+<!--    <meta name="viewport" content="width=1040">-->
 <!--    <script type="text/javascript" src="file:///android_asset/d3.v5.min.js" ></script>-->
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
@@ -25,11 +25,17 @@
     <script src="https://d3js.org/d3-drag.v2.min.js"></script>
     <script src="https://d3js.org/d3-zoom.v2.min.js"></script>
     <script type="text/javascript" src="file:///android_asset/loadPieChart.js" ></script>
+    <style>
+    body: {
+      background-color: red;
+    }
+  </style>
   </head>
-  <body>
+  <body style="height: 100vh;">
+
 <!--    <svg id="piechart" width="100%" height="100%"></svg>-->
 <!--svg`-->
-<svg width="3000px" height="3000px">
+<svg width="100%" height="100%">
   <style>
     text {
       font-family: sans-serif;
