feat: command logging in tui-browser

--- a/command-server/src/main/resources/test/d3graph.html
+++ b/command-server/src/main/resources/test/d3graph.html
@@ -51,6 +51,11 @@
 
   </svg>
 <script>
+fetch("graph").then(function(response){
+    response.json().then(function(data){
+        loadPieChart(data);
+    })
+})
 <!-- loadPieChart();-->
 </script>
 
