--- a/command-server/src/main/resources/test/d3graph.html
+++ b/command-server/src/main/resources/test/d3graph.html
@@ -51,6 +51,13 @@
 
   </svg>
 <script>
+const exampleSocket = new WebSocket("ws://localhost:8080/ws/");
+exampleSocket.onmessage = (e)=>{
+    console.log("exampleSocketMessage" + e);
+    const json = e.data
+    const data = JSON.parse(json)
+    loadPieChart(data);
+}
 fetch("graph").then(function(response){
     response.json().then(function(data){
         loadPieChart(data);
