--- a/command-server/src/main/resources/test/d3graph.html
+++ b/command-server/src/main/resources/test/d3graph.html
@@ -35,6 +35,7 @@
 
 <!--    <svg id="piechart" width="100%" height="100%"></svg>-->
 <!--svg`-->
+<button onclick="fetch('clear')">Clear</button>
 <svg width="100%" height="100%">
   <style>
     text {
